wip: add middleware
